--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <br><br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores beatae delectus deserunt ducimus explicabo hic impedit maxime molestiae nemo, nulla odio provident quae qui quia, quidem ullam voluptates voluptatum?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis doloribus esse inventore nobis officia, tenetur? Ad adipisci iure odio optio quia suscipit tempore velit voluptates? Harum iste itaque quod unde.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. This editing was done via github. <strong>Thank you</strong></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<strong>This editing was done via github. Thank you.</strong></p>
 
 </div>
 
